--- a/Farmer/templates/Farmer/base.html
+++ b/Farmer/templates/Farmer/base.html
@@ -24,11 +24,12 @@ scratch. This page gets rid of all links and provides the needed markup only.
      <link rel="stylesheet" href="{% static 'Farmer/css/alt/AdminLTE-fullcalendar.min.css' %}">
      <link rel="stylesheet" href="{% static 'Farmer/css/alt/AdminLTE-select2.min.css' %}">
      <link rel="stylesheet" href="{% static 'Farmer/css/alt/AdminLTE-without-plugins.min.css' %}">
+    <link rel="stylesheet" href="{% static 'Farmer/css/skins/_all-skins.min.css' %}">
   <!-- AdminLTE Skins. We have chosen the skin-blue for this starter
         page. However, you can choose any other skin. Make sure you
         apply the skin class to the body tag so the changes take effect. -->
 
-  <link rel="stylesheet" href="{% static 'Farmer/css/skins/_all-skins.min.css' %}">
+
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -48,7 +49,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <header class="main-header">
 
     <!-- Logo -->
-    <a href="#" class="logo">
+    <a href="{% url 'index' %}" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>H</b>D</span>
       <!-- logo for regular state and mobile devices -->
