--- a/Farmer/templates/Farmer/base.html
+++ b/Farmer/templates/Farmer/base.html
@@ -14,7 +14,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <link rel="stylesheet" href="{% static 'Farmer/css/bootstrap.min.css' %}">
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="{% static 'Farmer/css/font-awesome.min.css' %}">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <!-- Ionicons -->
   <link rel="stylesheet" href="{% static 'Farmer/css/ionicons.min.css' %}">
   <!-- Theme style -->
@@ -42,7 +42,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 </head>
-<body class="hold-transition skin-green sidebar-mini">
+<body class="hold-transition skin-green-light sidebar-mini">
 <div class="wrapper">
 
   <!-- Main Header -->
@@ -59,8 +59,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <!-- Header Navbar -->
     <nav class="navbar navbar-static-top" role="navigation">
       <!-- Sidebar toggle button-->
-        <a href="#" class="fa fa-reorder sidebar-toggle" data-toggle="push-menu" role="button">
-        </a>
       <!-- Navbar Right Menu -->
       <div class="navbar-custom-menu">
         <ul class="nav navbar-nav">
@@ -69,23 +67,20 @@ scratch. This page gets rid of all links and provides the needed markup only.
             <!-- Menu Toggle Button -->
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <!-- The user image in the navbar-->
-              <img src="{% static 'Farmer/img/user2-160x160.jpg' %}" class="user-image" alt="User Image">
+              <img src="{% static 'Farmer/img/fluke.jpg' %}" class="user-image" alt="User Image">
               <!-- hidden-xs hides the username on small devices so only the image appears. -->
-              <span class="hidden-xs">Alexander Pierce</span>
+              <span class="hidden-xs">นัทธพงศ์ ปัตโชติชัย</span>
             </a>
             <ul class="dropdown-menu">
               <!-- The user image in the menu -->
               <li class="user-header">
-                <img src="{% static 'Farmer/img/user2-160x160.jpg' %}" class="img-circle" alt="User Image">
-
-                <p>
-                  <small>Member since Nov. 2012</small>
-                </p>
+                <img src="{% static 'Farmer/img/fluke.jpg' %}" class="img-circle" alt="User Image">
+                <p>นัทธพงศ์ ปัตโชติชัย</p>
               </li>
               <!-- Menu Footer-->
               <li class="user-footer">
                 <div class="pull-right">
-                  <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                  <a href="{% url 'login' %}" class="btn btn-default btn-flat">Sign out</a>
                 </div>
               </li>
             </ul>
@@ -103,27 +98,27 @@ scratch. This page gets rid of all links and provides the needed markup only.
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel">
         <div class="pull-left image">
-          <img src="{% static 'Farmer/img/user2-160x160.jpg' %}" class="img-circle" alt="User Image">
+          <img src="{% static 'Farmer/img/fluke.jpg' %}" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
-          <p>Alexander Pierce</p>
+          <p>นัทธพงศ์ ปัตโชติชัย</p>
           <!-- Status -->
           <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
         </div>
       </div>
       <!-- Sidebar Menu -->
       <ul class="sidebar-menu" data-widget="tree">
-        <li class="header">Menu</li>
+        <li class="header">รายการ</li>
         <!-- Optionally, you can add icons to the links -->
         <li class="treeview">
-          <a href="#"><i class="fa fa-link"></i> <span>Multilevel</span>
+          <a href="#"><i class="fa fa-link"></i> <span>เกษตรกร</span>
             <span class="pull-right-container">
                 <i class="fa fa-angle-left pull-right"></i>
               </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="#">Link in level 2</a></li>
-            <li><a href="#">Link in level 2</a></li>
+            <li><a href="{% url 'createFarmer' %}">เพิ่มข้อมูล</a></li>
+            <li><a href="{% url 'index' %}">ข้อมูลเกษตรกร</a></li>
           </ul>
         </li>
       </ul>
@@ -144,10 +139,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <footer class="main-footer">
     <!-- To the right -->
     <div class="pull-right hidden-xs">
-      Anything you want
+      Nutthapong Patchotchai
     </div>
     <!-- Default to the left -->
-    <strong>Copyright &copy; 2019 <a href="#">Company</a>.</strong> All rights reserved.
+    <strong>Copyright &copy; 2019 </strong>
   </footer>
 
   <!-- Control Sidebar -->
