Farmer edit and delete

--- a/Farmer/templates/Farmer/EditFarmer.html
+++ b/Farmer/templates/Farmer/EditFarmer.html
@@ -7,7 +7,7 @@
         <div class="col-md-10">
     <div class="box box-success">
             <div class="box-header with-border">
-              <h3 class="box-title">เพิ่มข้อมูล เกษตรกร</h3>
+              <h3 class="box-title">แก้ไขข้อมูล เกษตรกร</h3>
             </div>
             <div class="box-body">
                 <div class="form-group">
@@ -16,7 +16,7 @@
                   <div class="input-group-addon">
                     <i class="fa fa-info"></i>
                   </div>
-                  <input type="text" class="form-control" data-inputmask="&quot;mask&quot;: &quot;(999) 999-9999&quot;" data-mask="">
+                  <input type="text" class="form-control" data-inputmask="&quot;mask&quot;: &quot;(999) 999-9999&quot;" data-mask="" placeholder="นัทธพงศ์">
                 </div>
               </div>
 
@@ -26,7 +26,7 @@
                   <div class="input-group-addon">
                     <i class="fa fa-info"></i>
                   </div>
-                  <input type="text" class="form-control" data-inputmask="&quot;mask&quot;: &quot;(999) 999-9999&quot;" data-mask="">
+                  <input type="text" class="form-control" data-inputmask="&quot;mask&quot;: &quot;(999) 999-9999&quot;" data-mask="" placeholder="ปัตโชติชัย">
                 </div>
               </div>
 
@@ -36,7 +36,7 @@
                   <div class="input-group-addon">
                     <i class="fa fa-male"></i>
                   </div>
-                  <input type="text" class="form-control" data-inputmask="&quot;mask&quot;: &quot;(999) 999-9999&quot;" data-mask="">
+                  <input type="text" class="form-control" data-inputmask="&quot;mask&quot;: &quot;(999) 999-9999&quot;" data-mask="" placeholder="22">
                 </div>
               </div>
 
@@ -46,7 +46,7 @@
                   <div class="input-group-addon">
                     <i class="fa fa-rss"></i>
                   </div>
-                  <input type="text" class="form-control" data-inputmask="&quot;mask&quot;: &quot;(999) 999-9999&quot;" data-mask="">
+                  <input type="text" class="form-control" data-inputmask="&quot;mask&quot;: &quot;(999) 999-9999&quot;" data-mask="" placeholder="393/160 ต.บ่อแฮ้ว อ.เมือง จ.ลำปาง 52100">
                 </div>
               </div>
 
@@ -56,11 +56,12 @@
                   <div class="input-group-addon">
                     <i class="fa fa-phone"></i>
                   </div>
-                  <input type="text" class="form-control" data-inputmask="&quot;mask&quot;: &quot;(999) 999-9999&quot;" data-mask="">
+                  <input type="text" class="form-control" data-inputmask="&quot;mask&quot;: &quot;(999) 999-9999&quot;" data-mask="" placeholder="054350359">
                 </div>
               </div>
                 <br>
-                <a type="submit" class="btn btn-primary" href="{% url 'index' %}">Submit</a>
+                <a type="submit" class="btn btn-success" href="{% url 'index' %}">ตกลง</a>
+                <a type="submit" class="btn btn-danger" href="{% url 'index' %}">ยกเลิก</a>
 
             </div>
     </div>
