--- a/Farmer/templates/Farmer/index.html
+++ b/Farmer/templates/Farmer/index.html
@@ -31,204 +31,26 @@
                 <tbody>
 
                 <tr role="row" class="odd">
-                  <td class="sorting_1">Gecko</td>
-                    <td>Molalas</td>
+                  <td class="sorting_1">นัทธพงศ์</td>
+                    <td>ปัตโชติชัย</td>
                     <td>22</td>
-                    <td>michigan</td>
-                    <td>0857110853</td>
+                    <td>393/160 ต.บ่อแฮ้ว อ.เมือง จ.ลำปาง 52100</td>
+                    <td>054350359</td>
                   <td>
                       <ul class="sidebar-menu skin-green-light" data-widget="tree">
                         <li class="treeview skin-green-light">
                             <a href="#"class="btn btn-primary">ข้อมูล</a>
                                 <ul class="treeview-menu">
-                                    <button type="button" class="btn btn-block btn-info">ดูข้อมูล</button>
-                                    <button type="button" class="btn btn-block btn-warning">แก้ไข</button>
-                                    <button type="button" class="btn btn-block btn-danger">ลบ</button>
+                                    <a type="button" class="btn btn-block btn-info">ดูข้อมูล</a>
+                                    <a type="button" class="btn btn-block btn-warning" href="{% url 'editFarmer' %}">แก้ไข</a>
+                                    <a type="button" class="btn btn-block btn-danger" href="{% url 'deleteFarmer' %}">ลบ</a>
                                 </ul>
                         </li>
                       </ul>
                   </td>
                 </tr>
 
-                <tr role="row" class="odd">
-                  <td class="sorting_1">Gecko</td>
-                    <td>Molalas</td>
-                    <td>22</td>
-                    <td>michigan</td>
-                    <td>0857110853</td>
-                  <td>
-                      <ul class="sidebar-menu skin-green-light" data-widget="tree">
-                        <li class="treeview skin-green-light">
-                            <a href="#"class="btn btn-primary">ข้อมูล</a>
-                                <ul class="treeview-menu">
-                                    <button type="button" class="btn btn-block btn-info">ดูข้อมูล</button>
-                                    <button type="button" class="btn btn-block btn-warning">แก้ไข</button>
-                                    <button type="button" class="btn btn-block btn-danger">ลบ</button>
-                                </ul>
-                        </li>
-                      </ul>
-                  </td>
-                </tr>
 
-                <tr role="row" class="odd">
-                  <td class="sorting_1">Gecko</td>
-                    <td>Molalas</td>
-                    <td>22</td>
-                    <td>michigan</td>
-                    <td>0857110853</td>
-                  <td>
-                      <ul class="sidebar-menu skin-green-light" data-widget="tree">
-                        <li class="treeview skin-green-light">
-                            <a href="#"class="btn btn-primary">ข้อมูล</a>
-                                <ul class="treeview-menu">
-                                    <button type="button" class="btn btn-block btn-info">ดูข้อมูล</button>
-                                    <button type="button" class="btn btn-block btn-warning">แก้ไข</button>
-                                    <button type="button" class="btn btn-block btn-danger">ลบ</button>
-                                </ul>
-                        </li>
-                      </ul>
-                  </td>
-                </tr>
-
-                <tr role="row" class="odd">
-                  <td class="sorting_1">Gecko</td>
-                    <td>Molalas</td>
-                    <td>22</td>
-                    <td>michigan</td>
-                    <td>0857110853</td>
-                  <td>
-                      <ul class="sidebar-menu skin-green-light" data-widget="tree">
-                        <li class="treeview skin-green-light">
-                            <a href="#"class="btn btn-primary">ข้อมูล</a>
-                                <ul class="treeview-menu">
-                                    <button type="button" class="btn btn-block btn-info">ดูข้อมูล</button>
-                                    <button type="button" class="btn btn-block btn-warning">แก้ไข</button>
-                                    <button type="button" class="btn btn-block btn-danger">ลบ</button>
-                                </ul>
-                        </li>
-                      </ul>
-                  </td>
-                </tr>
-
-                <tr role="row" class="odd">
-                  <td class="sorting_1">Gecko</td>
-                    <td>Molalas</td>
-                    <td>22</td>
-                    <td>michigan</td>
-                    <td>0857110853</td>
-                  <td>
-                      <ul class="sidebar-menu skin-green-light" data-widget="tree">
-                        <li class="treeview skin-green-light">
-                            <a href="#"class="btn btn-primary">ข้อมูล</a>
-                                <ul class="treeview-menu">
-                                    <button type="button" class="btn btn-block btn-info">ดูข้อมูล</button>
-                                    <button type="button" class="btn btn-block btn-warning">แก้ไข</button>
-                                    <button type="button" class="btn btn-block btn-danger">ลบ</button>
-                                </ul>
-                        </li>
-                      </ul>
-                  </td>
-                </tr>
-
-                <tr role="row" class="odd">
-                  <td class="sorting_1">Gecko</td>
-                    <td>Molalas</td>
-                    <td>22</td>
-                    <td>michigan</td>
-                    <td>0857110853</td>
-                  <td>
-                      <ul class="sidebar-menu skin-green-light" data-widget="tree">
-                        <li class="treeview skin-green-light">
-                            <a href="#"class="btn btn-primary">ข้อมูล</a>
-                                <ul class="treeview-menu">
-                                    <button type="button" class="btn btn-block btn-info">ดูข้อมูล</button>
-                                    <button type="button" class="btn btn-block btn-warning">แก้ไข</button>
-                                    <button type="button" class="btn btn-block btn-danger">ลบ</button>
-                                </ul>
-                        </li>
-                      </ul>
-                  </td>
-                </tr>
-
-                <tr role="row" class="odd">
-                  <td class="sorting_1">Gecko</td>
-                    <td>Molalas</td>
-                    <td>22</td>
-                    <td>michigan</td>
-                    <td>0857110853</td>
-                  <td>
-                      <ul class="sidebar-menu skin-green-light" data-widget="tree">
-                        <li class="treeview skin-green-light">
-                            <a href="#"class="btn btn-primary">ข้อมูล</a>
-                                <ul class="treeview-menu">
-                                    <button type="button" class="btn btn-block btn-info">ดูข้อมูล</button>
-                                    <button type="button" class="btn btn-block btn-warning">แก้ไข</button>
-                                    <button type="button" class="btn btn-block btn-danger">ลบ</button>
-                                </ul>
-                        </li>
-                      </ul>
-                  </td>
-                </tr>
-
-                <tr role="row" class="odd">
-                  <td class="sorting_1">Gecko</td>
-                    <td>Molalas</td>
-                    <td>22</td>
-                    <td>michigan</td>
-                    <td>0857110853</td>
-                  <td>
-                      <ul class="sidebar-menu skin-green-light" data-widget="tree">
-                        <li class="treeview skin-green-light">
-                            <a href="#"class="btn btn-primary">ข้อมูล</a>
-                                <ul class="treeview-menu">
-                                    <button type="button" class="btn btn-block btn-info">ดูข้อมูล</button>
-                                    <button type="button" class="btn btn-block btn-warning">แก้ไข</button>
-                                    <button type="button" class="btn btn-block btn-danger">ลบ</button>
-                                </ul>
-                        </li>
-                      </ul>
-                  </td>
-                </tr>
-
-                <tr role="row" class="odd">
-                  <td class="sorting_1">Gecko</td>
-                    <td>Molalas</td>
-                    <td>22</td>
-                    <td>michigan</td>
-                    <td>0857110853</td>
-                  <td>
-                      <ul class="sidebar-menu skin-green-light" data-widget="tree">
-                        <li class="treeview skin-green-light">
-                            <a href="#"class="btn btn-primary">ข้อมูล</a>
-                                <ul class="treeview-menu">
-                                    <button type="button" class="btn btn-block btn-info">ดูข้อมูล</button>
-                                    <button type="button" class="btn btn-block btn-warning">แก้ไข</button>
-                                    <button type="button" class="btn btn-block btn-danger">ลบ</button>
-                                </ul>
-                        </li>
-                      </ul>
-                  </td>
-                </tr>
-
-                <tr role="row" class="odd">
-                  <td class="sorting_1">Gecko</td>
-                    <td>Molalas</td>
-                    <td>22</td>
-                    <td>michigan</td>
-                    <td>0857110853</td>
-                  <td>
-                      <ul class="sidebar-menu skin-green-light" data-widget="tree">
-                        <li class="treeview skin-green-light">
-                            <a href="#"class="btn btn-primary">ข้อมูล</a>
-                                <ul class="treeview-menu">
-                                    <button type="button" class="btn btn-block btn-info">ดูข้อมูล</button>
-                                    <button type="button" class="btn btn-block btn-warning">แก้ไข</button>
-                                    <button type="button" class="btn btn-block btn-danger">ลบ</button>
-                                </ul>
-                        </li>
-                      </ul>
-                  </td>
-                </tr>
 
                 </tbody>
               </table></div></div>
