add plant and harvest ui

--- a/Farmer/templates/Farmer/ViewHarvest.html
+++ b/Farmer/templates/Farmer/ViewHarvest.html
@@ -4,9 +4,12 @@
 <section class="content">
 <div class="row" >
     <div class="col-md-1">
-<a type="button" class="btn btn-block btn-success btn-lg" href="{% url 'createFarmer' %}">เพิ่ม</a>
+<a type="button" class="btn btn-block btn-success btn-lg" href="{% url 'createPlant' %}">เพิ่ม</a>
         </div>
-    <div class="col-md-11"></div>
+    <div class="col-md-1">
+        <a type="button" class="btn btn-block btn-danger btn-lg" href="{% url 'viewFarmer' %}">ย้อนกลับ</a>
+    </div>
+    <div class="col-md-10"></div>
 </div>
     <br>
       <div class="row">
@@ -14,7 +17,7 @@
         <div class="col-md-12">
             <div class="box box-success">
                 <div class="box-header">
-                <h3 class="box-title">ตาราง ข้อมูลเกษตรกร</h3>
+                <h3 class="box-title">ตาราง ข้อมูลการเก็บเกี่ยวของเกษตรกร</h3>
                 </div>
             <!-- /.box-header -->
             <div class="box-body">
@@ -22,28 +25,25 @@
                 <thead>
                 <tr role="row">
                     <th class="sorting_asc" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Rendering engine: activate to sort column descending">ชื่อ</th>
-                    <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Browser: activate to sort column ascending">นามสกุล</th>
-                    <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Platform(s): activate to sort column ascending">อายุ</th>
-                    <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Engine version: activate to sort column ascending">ที่อยู่</th>
-                    <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">เบอร์โทรศัพท์</th>
+                    <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Browser: activate to sort column ascending">สายพันธุ์</th>
+                    <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Platform(s): activate to sort column ascending">จำนวนการเก็บเกียว</th>
+                    <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Platform(s): activate to sort column ascending">ปี</th>
                     <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">สถานะ</th></tr>
                 </thead>
                 <tbody>
 
                 <tr role="row" class="odd">
-                  <td class="sorting_1">นัทธพงศ์</td>
-                    <td>ปัตโชติชัย</td>
-                    <td>22</td>
-                    <td>393/160 ต.บ่อแฮ้ว อ.เมือง จ.ลำปาง 52100</td>
-                    <td>054350359</td>
+                  <td class="sorting_1">ส้ม</td>
+                    <td>เขียวหวาน</td>
+                    <td>120 กิโลกรัม</td>
+                    <td>2018</td>
                   <td>
                       <ul class="sidebar-menu skin-green-light" data-widget="tree">
                         <li class="treeview skin-green-light">
                             <a href="#"class="btn btn-primary">ข้อมูล</a>
                                 <ul class="treeview-menu">
-                                    <a type="button" class="btn btn-block btn-info" href="{% url 'viewFarmer' %}">ดูข้อมูล</a>
-                                    <a type="button" class="btn btn-block btn-warning" href="{% url 'editFarmer' %}">แก้ไข</a>
-                                    <a type="button" class="btn btn-block btn-danger" href="{% url 'deleteFarmer' %}">ลบ</a>
+                                    <a type="button" class="btn btn-block btn-warning" href="{% url 'editHarvest' %}">แก้ไข</a>
+                                    <a type="button" class="btn btn-block btn-danger" href="{% url 'deleteHarvest' %}">ลบ</a>
                                 </ul>
                         </li>
                       </ul>
