--- a/Farmer/templates/Farmer/ViewHarvest.html
+++ b/Farmer/templates/Farmer/ViewHarvest.html
@@ -24,34 +24,26 @@
               <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap"><div class="row"><div class="col-sm-6"></div><div class="col-sm-6"></div></div><div class="row"><div class="col-sm-12"><table id="example2" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">
                 <thead>
                 <tr role="row">
-                    <th class="sorting_asc" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Rendering engine: activate to sort column descending">ชื่อ</th>
-                    <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Browser: activate to sort column ascending">สายพันธุ์</th>
                     <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Platform(s): activate to sort column ascending">จำนวนการเก็บเกียว</th>
                     <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Platform(s): activate to sort column ascending">ปี</th>
+                    <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">กราฟ</th>
                     <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">สถานะ</th></tr>
                 </thead>
                 <tbody>
-
-                <tr role="row" class="odd">
-                  <td class="sorting_1">ส้ม</td>
-                    <td>เขียวหวาน</td>
-                    <td>120 กิโลกรัม</td>
-                    <td>2018</td>
+                 <tr role="row" class="odd">
+                 <td>{{ ba.fruit_name }}</td>
+                  <td>{{ ba.fruit_breed }}</td>
+                {% for ca in ca %}
+                    <td>{{ ca.product }} กิโลกรัม</td>
+                    <td>{{ ca.years }}</td>
+                    <td>
+                  </td>
                   <td>
-                      <ul class="sidebar-menu skin-green-light" data-widget="tree">
-                        <li class="treeview skin-green-light">
-                            <a href="#"class="btn btn-primary">ข้อมูล</a>
-                                <ul class="treeview-menu">
-                                    <a type="button" class="btn btn-block btn-warning" href="{% url 'editHarvest' %}">แก้ไข</a>
-                                    <a type="button" class="btn btn-block btn-danger" href="{% url 'deleteHarvest' %}">ลบ</a>
-                                </ul>
-                        </li>
-                      </ul>
+                      <a type="button"  href="{% url 'editHarvest' %}">[แก้ไข]</a>
+                      <a type="button"  href="{% url 'deleteHarvest' %}">[ลบ]</a>
                   </td>
                 </tr>
-
-
-
+                {% endfor %}
                 </tbody>
               </table></div></div>
                   <div class="row">
