--- a/Farmer/templates/Farmer/ViewPlant.html
+++ b/Farmer/templates/Farmer/ViewPlant.html
@@ -30,26 +30,21 @@
                     <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">สถานะ</th></tr>
                 </thead>
                 <tbody>
-
+                {% for ca in ca %}
+                {% for ba in ba %}
                 <tr role="row" class="odd">
-                  <td class="sorting_1">ส้ม</td>
-                    <td>เขียวหวาน</td>
-                    <td>30ไร่</td>
+                  <td class="sorting_1"><a type="button" href="#">{{ ba.fruit_name }}</a></td>
+                    <td>{{ ba.fruit_breed }}</td>
+                    <td>{{ ba.scale }} ไร่</td>
                   <td>
-                      <ul class="sidebar-menu skin-green-light" data-widget="tree">
-                        <li class="treeview skin-green-light">
-                            <a href="#"class="btn btn-primary">ข้อมูล</a>
-                                <ul class="treeview-menu">
-                                    <a type="button" class="btn btn-block btn-info" href="{% url 'viewHarvest' %}">ดูข้อมูล</a>
-                                    <a type="button" class="btn btn-block btn-warning" href="{% url 'editPlant' %}">แก้ไข</a>
-                                    <a type="button" class="btn btn-block btn-danger" href="{% url 'deletePlant' %}">ลบ</a>
-                                </ul>
-                        </li>
-                      </ul>
+
+                      <a type="button" href="{% url 'editPlant' %}">[แก้ไข]</a>
+                      <a type="button" href="{% url 'deletePlant' %}">[ลบ]</a>
                   </td>
+                <td>{{ ba.id }}</td>
                 </tr>
-
-
+                {% endfor %}
+                {% endfor %}
 
                 </tbody>
               </table></div></div>
