--- a/Farmer/templates/Farmer/base.html
+++ b/Farmer/templates/Farmer/base.html
@@ -1,5 +1,3 @@
-
-<!DOCTYPE html>
 {% load static %}
 <!--
 This is a starter template page. Use this page to start your new project from
@@ -14,8 +12,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <link rel="stylesheet" href="{% static 'Farmer/css/bootstrap.min.css' %}">
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-  <!-- Ionicons -->
+{#  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">#}
+  <link rel="stylesheet" href="{% static 'Farmer/css/font-awesome.min.css' %}">
+    <!-- Ionicons -->
   <link rel="stylesheet" href="{% static 'Farmer/css/ionicons.min.css' %}">
   <!-- Theme style -->
   <link rel="stylesheet" href="{% static 'Farmer/css/AdminLTE.min.css' %}">
@@ -28,21 +27,11 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!-- AdminLTE Skins. We have chosen the skin-blue for this starter
         page. However, you can choose any other skin. Make sure you
         apply the skin class to the body tag so the changes take effect. -->
-
-
-
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-
   <!-- Google Font -->
   <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 </head>
-<body class="hold-transition skin-green-light sidebar-mini">
+<body class="hold-transition skin-green sidebar-mini">
 <div class="wrapper">
 
   <!-- Main Header -->
@@ -66,21 +55,17 @@ scratch. This page gets rid of all links and provides the needed markup only.
           <li class="dropdown user user-menu">
             <!-- Menu Toggle Button -->
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <!-- The user image in the navbar-->
-              <img src="{% static 'Farmer/img/fluke.jpg' %}" class="user-image" alt="User Image">
-              <!-- hidden-xs hides the username on small devices so only the image appears. -->
-              <span class="hidden-xs">นัทธพงศ์ ปัตโชติชัย</span>
+              <span class="hidden-xs">{{ user.first_name }} {{ user.last_name }}</span>
             </a>
             <ul class="dropdown-menu">
               <!-- The user image in the menu -->
               <li class="user-header">
-                <img src="{% static 'Farmer/img/fluke.jpg' %}" class="img-circle" alt="User Image">
-                <p>นัทธพงศ์ ปัตโชติชัย</p>
+                <p>{{ user.first_name }} {{ user.last_name }}</p>
               </li>
               <!-- Menu Footer-->
               <li class="user-footer">
                 <div class="pull-right">
-                  <a href="{% url 'login' %}" class="btn btn-default btn-flat">Sign out</a>
+                  <a href="{% url 'logout' %}" class="btn btn-default btn-flat">Sign out</a>
                 </div>
               </li>
             </ul>
@@ -90,42 +75,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
     </nav>
   </header>
   <!-- Left side column. contains the logo and sidebar -->
-  <aside class="main-sidebar">
-
-    <!-- sidebar: style can be found in sidebar.less -->
-    <section class="sidebar">
-
-      <!-- Sidebar user panel (optional) -->
-      <div class="user-panel">
-        <div class="pull-left image">
-          <img src="{% static 'Farmer/img/fluke.jpg' %}" class="img-circle" alt="User Image">
-        </div>
-        <div class="pull-left info">
-          <p>นัทธพงศ์ ปัตโชติชัย</p>
-          <!-- Status -->
-          <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
-        </div>
-      </div>
-      <!-- Sidebar Menu -->
-      <ul class="sidebar-menu" data-widget="tree">
-        <li class="header">รายการ</li>
-        <!-- Optionally, you can add icons to the links -->
-        <li class="treeview">
-          <a href="#"><i class="fa fa-link"></i> <span>เกษตรกร</span>
-            <span class="pull-right-container">
-                <i class="fa fa-angle-left pull-right"></i>
-              </span>
-          </a>
-          <ul class="treeview-menu">
-            <li><a href="{% url 'createFarmer' %}">เพิ่มข้อมูล</a></li>
-            <li><a href="{% url 'index' %}">ข้อมูลเกษตรกร</a></li>
-          </ul>
-        </li>
-      </ul>
-      <!-- /.sidebar-menu -->
-    </section>
-    <!-- /.sidebar -->
-  </aside>
 
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
