--- a/Farmer/templates/Farmer/login.html
+++ b/Farmer/templates/Farmer/login.html
@@ -40,26 +40,14 @@
   <div class="login-box-body">
     <h2 class="login-box-msg">เข้าสู่ระบบ</h2>
 
-    <form method="post">
-        {% csrf_token %}
-      <div class="form-group has-feedback">
-        <input type="email" class="form-control" placeholder="ชื่อผู้ใช้">
-        <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
-      </div>
-      <div class="form-group has-feedback">
-        <input type="password" class="form-control" placeholder="รหัสผ่าน">
-        <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-      </div>
-      <div class="row">
-        <div class="col-xs-8">
-        </div>
-        <!-- /.col -->
-        <div class="col-xs-4">
-          <a class="btn btn-primary btn-block btn-flat" href="{% url 'index' %}">เข้าสู่ระบบ</a>
-        </div>
-        <!-- /.col -->
-      </div>
-    </form>
+		<form action="" method="post" name="Login_Form" class="form-signin">
+			  <hr class="colorgraph"><br>
+
+			  {% csrf_token %}
+              {{ form.as_p }}
+
+			  <button class="btn btn-group-lg btn-primary middle"  name="Submit" value="Login" type="Submit">Login</button>
+		</form>
 
   <!-- /.login-box-body -->
 </div>
